--- a/code/device/barter2/app/src/main/res/layout-normal/activity_detail.xml
+++ b/code/device/barter2/app/src/main/res/layout-normal/activity_detail.xml
@@ -48,7 +48,7 @@
         android:layout_alignEnd="@+id/textView5" />
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/imageInDetail"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:src="@mipmap/book"
@@ -62,10 +62,62 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/detail_text"
-        android:id="@+id/textView8"
-        android:layout_below="@+id/imageView5"
+        android:id="@+id/descriptionInDetail"
+        android:layout_below="@+id/imageInDetail"
         android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
         android:layout_alignEnd="@+id/search" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Seller:"
+        android:id="@+id/textView10"
+        android:layout_below="@+id/descriptionInDetail"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/sellerInDetail"
+        android:layout_below="@+id/descriptionInDetail"
+        android:layout_toEndOf="@+id/myPost" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Phone:"
+        android:id="@+id/textView12"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/sellerInDetail"
+        android:layout_alignParentLeft="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/phoneInDetail"
+        android:layout_alignTop="@+id/textView12"
+        android:layout_alignStart="@+id/sellerInDetail" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Price:"
+        android:id="@+id/textView14"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/phoneInDetail"
+        android:layout_alignParentLeft="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/priceInDetail"
+        android:layout_below="@+id/phoneInDetail"
+        android:layout_toEndOf="@+id/myPost" />
 
 </RelativeLayout>
