--- a/code/device/barter2/app/src/main/res/layout-normal/activity_my_post.xml
+++ b/code/device/barter2/app/src/main/res/layout-normal/activity_my_post.xml
@@ -32,8 +32,8 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="My Post"
-        android:id="@+id/myPost"
+        android:text="New Post"
+        android:id="@+id/newPostInMyPosts"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/myAccount"
         android:layout_toEndOf="@+id/myAccount" />
