--- a/code/device/barter2/app/src/main/res/layout/activity_detail.xml
+++ b/code/device/barter2/app/src/main/res/layout/activity_detail.xml
@@ -48,7 +48,7 @@
         android:layout_alignEnd="@+id/textView5" />
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/imageInDetail"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:src="@mipmap/book"
@@ -62,8 +62,8 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/detail_text"
-        android:id="@+id/textView8"
-        android:layout_below="@+id/imageView5"
+        android:id="@+id/descriptionInDetail"
+        android:layout_below="@+id/imageInDetail"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_alignEnd="@+id/search" />
